--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,8 @@
         <button onclick="predict()">Predict Properties</button>
         
         <div id="result" class="result"></div>
+        
+        <div id="molecule-structure" class="molecule-structure"></div>
     </div>
 
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
